--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=b1a355a908b6e174c40e867f285efde5
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgres://reubchou:dlocad321@localhost:5432/teachr"
+DATABASE_URL="postgres://username:password@localhost:5432/db_name"
 ###< doctrine/doctrine-bundle ###
